[package]
name = "crawler_asn_cidrs_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
select = "0.6.0"
regex = "1.10.2"
tokio = { version = "1", features = ["full"] }
scraper = "0.17.1"
lazy_static = "1.4.0"
url = "2.4.1"


[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]